cmd/server: wire through qledger persistence to account routes
Issue: https://github.com/moov-io/gl/issues/6
