# openapi.yaml
@@ -175,15 +175,9 @@ components:
     CreateAccount:
       type: object
       required:
-        - customerId
         - name
         - type
       properties:
-        customerId:
-          type: string
-          format: uuid
-          description: The unique identifier for the customer who owns the account
-          example: e210a9d6-d755-4455-9bd2-9577ea7e1081
         name:
           type: string
           description: Caller defined label for this account.
